fixed overflow issue

--- a/assets/style.css
+++ b/assets/style.css
@@ -158,11 +158,9 @@ a.news-article-link {
 
 /* Weather - page parent */
 #weather-page-parent{
-    display: flex; 
+    display: inline-flex; 
     flex-direction: column; 
     align-items: center;
     border-radius: 10px;
-    padding: 20px;
-    margin-left: 10%;
-    margin-right: 10%;
+    padding-top: 20px;
 }
